# llm-hidden-meanings

./: .gitignore  01-attack.ipynb  02-results.ipynb  03-understanding-tests.ipynb  04-analyze-understanding.ipynb  05-analyze-understanding-clean.ipynb  06-interp.ipynb  09-2byte-scripts.ipynb  README.md  attack.py  judges.py  main.py  pyproject.toml
data/: attacks_data.json  understanding_large.csv  understanding_test.csv
data/JBB/: JBB_harmful_behaviors_2samples.csv
data/batches/: batch_input_deepseek_r1_llama_70B.jsonl  batch_input_deepseek_v3.jsonl  batch_input_phi_3_5_mini.jsonl  batch_input_qwen_2_5_32B.jsonl  batch_input_qwen_2_5__1_5B.jsonl
logs/: 07_03_2025__22_23_02_2b_test_ru.json  20250221_192906_GigaChat-Max_2b|3b|4b_100_256_2025_understanding.json  20250222_131943_gpt-4o_2b|3b|4b_300_1000_None_understanding.json  20250222_181141_gpt-4o_2b|3b|4b_300_1000_2025_understanding.json  20250227_113811_claude-3-7-sonnet-20250219_2b_v2_3b_v2_200_10000_2025_understanding.json  2b_test_ru_ar_he.json
logs/attack/: 20250225_235124_claude-3-5-sonnet-20241022_0-1-2_JBB_harmful_behaviors_10_2025_attack.json  20250225_235531_gpt-4o_0-1-2_JBB_harmful_behaviors_10_2025_attack.json  20250225_235531_gpt-4o_0-1-2_JBB_harmful_behaviors_10_2025_attack_judged.json  20250225_235531_gpt-4o_0-1-2_JBB_harmful_behaviors_10_2025_attack_unjudged.json  20250226_085753_claude-3-5-sonnet-20241022_0-1-2-3-4-5-6-7-8-9_JBB_harmful_behaviors_10_2025_attack.json  20250226_135009.json  20250226_135358.json  claude_sonnet_new_20250226_133138.json  (+5 more)
utils/: encs.py  llms.py  llms_hf.py  util.py
(+1 files in other folders)
